# fast-zhunt

./: Dockerfile  LICENSE.txt  README.md  meson.build  zhun3.c
src/: Makefile  antisyn.c  antisyn.h  delta_linking.c  delta_linking.h  mhunt.c  zhunt2.c  zhunt3.c
test/data/: example_input0-fixed.fasta.Z-SCORE  example_input0-integer_esum.fasta.Z-SCORE  example_input0.fasta.Z-SCORE
